--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     </h2>
                                     <p>
                                         
-                                            2022 · 自律
+                                            2023 · 自律
                                         
                                     </p>
                                 </div>
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="Dmego Home">Dmego</a>
+                        <a href="#" title="imagic79 Home">Dmego</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
@@ -62,13 +62,13 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://baidu.cn" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">简历</a>
+                                        <a href="https://baidu.cn" class="blog-button" target="_blank">简历</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://dmego.cn/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://baidu/about/" class="blog-button" target="_blank">关于</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -77,7 +77,7 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/dmego/" title="github" target="_blank">
+                                        <a href="https://github.com/imagic79/" title="github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
                                             <span class="label">github</span>
                                         </a>
@@ -97,8 +97,8 @@
                                     </li>
                                     <li class="navigation__item">
                                         <!-- 加密的邮箱地址, 请自行修改, 或者改用下方的明文方式 -->
-                                        <a href="javascript:decryptEmail('ZG1lYWdvQGdtYWlsLmNvbQ==');" title="email">
-                                        <!-- <a href="test@test.com" title="email"> -->
+<!--                                         <a href="javascript:decryptEmail('ZG1lYWdvQGdtYWlsLmNvbQ==');" title="email"> -->
+                                         <a href="imagic79@126.com" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
@@ -129,11 +129,11 @@
 </html>
 
 <!-- Google Analytics (请自行删除) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4L0GELWRT2"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4L0GELWRT2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-4L0GELWRT2');
-</script>
+</script> -->
