--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="keywords" content="Dmego,Homepage">
     <meta name="author" content="Dmego">
     <title>Dmego Home</title>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/onlinewebfonts.css"/>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/iconfont.css">
-    <link rel="apple-touch-icon" href="https://unpkg.com/dmego-home-page@latest/apple-touch-icon.png">
-    <link rel="icon" href="https://unpkg.com/dmego-home-page@latest/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/dmego-home-page@latest/assets/css/onlinewebfonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/dmego-home-page@latest/assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://www.unpkg.com/dmego-home-page@latest/assets/css/iconfont.css">
+    <link rel="apple-touch-icon" href="https://www.unpkg.com/dmego-home-page@latest/apple-touch-icon.png">
+    <link rel="icon" href="https://www.unpkg.com/dmego-home-page@latest/favicon.ico">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://unpkg.com/dmego-home-page@latest/assets/img/logo3.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://www.unpkg.com/dmego-home-page@latest/assets/img/logo3.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -62,13 +62,13 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://baidu.cn" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://baidu.cn" class="blog-button" target="_blank">简历</a>
+                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">简历</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://baidu/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://www.baidu/about/" class="blog-button" target="_blank">关于</a>
                                     </li>
                                 </ul>
                             </nav>
