--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dmego Home">
-    <meta name="keywords" content="Dmego,Homepage">
-    <meta name="author" content="Dmego">
-    <title>Dmego Home</title>
+    <meta name="description" content="imagic79 Home">
+    <meta name="keywords" content="imagic79,Homepage">
+    <meta name="author" content="imagic79">
+    <title>Imagic79 Home</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/dmego-home-page@latest/assets/css/iconfont.css">
@@ -68,7 +68,7 @@
                                         <a href="https://www.baidu.com" class="blog-button" target="_blank">简历</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://www.baidu/about/" class="blog-button" target="_blank">关于</a>
+                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">关于</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -83,14 +83,14 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://www.cnblogs.com/dmego/" title="cnblogs" target="_blank">
+                                        <a href="https://blog.csdn.net/qq_57229886?spm=1000.2115.3001.5343" title="cnblogs" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/dmego/" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/qing-li-jian-de-cai-jue" title="zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
@@ -129,11 +129,11 @@
 </html>
 
 <!-- Google Analytics (请自行删除) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4L0GELWRT2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4L0GELWRT2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-4L0GELWRT2');
-</script> -->
+</script>
