--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://github.com/imagic79/imagic79.github.io/blob/gh-pages/img/imagic79.png" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="img/imagic79.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -46,7 +46,7 @@
                         </a>
                     </div>
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="imagic79 Home">Dmego</a>
+                        <a href="#" title="imagic79 Home">imagic79</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
