--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">博客</a>
+                                        <a href="frank01201.github.io" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://www.baidu.com" class="blog-button" target="_blank">简历</a>
