--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://frank01201.github.io" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://frank01201.github.io/archives/" class="blog-button" target="_blank">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">简历</a>
+                                        <a href="https://frank01201.github.io" class="blog-button" target="_blank">简历</a>
                                     </li>
-                                    <li class="navigation__item">
+<!--                                      <li class="navigation__item">
                                         <a href="https://www.baidu.com" class="blog-button" target="_blank">关于</a>
-                                    </li>
+                                    </li>  -->
                                 </ul>
                             </nav>
                         </div>
@@ -77,20 +77,20 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/imagic79/" title="github" target="_blank">
+                                        <a href="https://github.com/imagic79/" title="Github" target="_blank">
                                             <i class='social iconfont icon-github'></i>
                                             <span class="label">github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://blog.csdn.net/qq_57229886?spm=1000.2115.3001.5343" title="cnblogs" target="_blank">
+                                        <a href="https://blog.csdn.net/qq_57229886?spm=1000.2115.3001.5343" title="CSDN" target="_blank">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
 
                                     <li class="navigation__item">
-                                        <a href="https://www.zhihu.com/people/qing-li-jian-de-cai-jue" title="zhihu" target="_blank">
+                                        <a href="https://www.zhihu.com/people/qing-li-jian-de-cai-jue" title="Zhihu" target="_blank">
                                             <i class='social iconfont icon-zhihu'></i>
                                             <span class="label">zhihu</span>
                                         </a>
