--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                                     <li class="navigation__item">
                                         <a href="https://frank01201.github.io" class="blog-button" target="_blank">简历</a>
                                     </li>
-<!--                                      <li class="navigation__item">
-                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">关于</a>
-                                    </li>  -->
+                                    <li class="navigation__item">
+                                        <a href="https://www.baidu.com" class="blog-button" target="_blank">百度一下</a>
+                                    </li> 
                                 </ul>
                             </nav>
                         </div>
